Finalizados os modelos, rotas e controladores dos carrinhos, produtos e usuários. Issues #16, #15, #13, #12, #11, #10, #9, #5, #3 completos, #14 em andamento. ~por Gabriel Rocha
