# src/app.js
@@ -9,6 +9,7 @@ const UsersRouter = require("./Routes/UsersRouter");
 const ProductRouter = require("./Routes/ProductRouter");
 const ApiDocsRouter = require("./Routes/ApiDocsRouter");
 const SignInRouter = require("./Routes/SignInRouter");
+const CartRoute = require("./Routes/CartRouter");
 
 const app = express();
 
@@ -24,6 +25,8 @@ app.use("/usuarios", UsersRouter);
 app.use("/produtos", ProductRouter);
 
 app.use("/cadastrar", SignInRouter);
+
+app.use("/carrinhos", CartRoute);
 
 app.listen(process.env.PORT, () => {
   mongoose.connect(process.env.MONGODB_CONNECT);
